github-actions/force-app/main/default/objects/ErrorLog__c/fields/AffectedUser__c.field-meta.xml
<CustomField>
    <fullName>AffectedUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Affected User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Error_logs</relationshipName>
    <type>Lookup</type>
</CustomField>