github-actions/force-app/main/default/objects/ErrorLog__c/fields/ComponentType__c.field-meta.xml
<CustomField>
    <fullName>ComponentType__c</fullName>
    <label>Component Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>Apex Class</fullName>
            </value>
            <value>
                <fullName>Apex Trigger</fullName>
            </value>
            <value>
                <fullName>Batch Apex</fullName>
            </value>
            <value>
                <fullName>LWC</fullName>
            </value>
            <value>
                <fullName>Aura Component</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>