github-actions/force-app/main/default/objects/ErrorLog__c/fields/ErrorContent__c.field-meta.xml
<CustomField>
    <fullName>ErrorContent__c</fullName>
    <label>Error Content</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>