github-actions/force-app/main/default/objects/ErrorLog__c/fields/ErrorTitle__c.field-meta.xml
<CustomField>
    <fullName>ErrorTitle__c</fullName>
    <label>Error Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>