github-actions/force-app/main/default/objects/ErrorLog__c/fields/FlowDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>FlowDeveloperName__c</fullName>
    <label>Flow Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>