github-actions/force-app/main/default/objects/ErrorLog__c/fields/FlowName__c.field-meta.xml
<CustomField>
    <fullName>FlowName__c</fullName>
    <label>Flow Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>