github-actions/force-app/main/default/objects/ErrorLog__c/fields/FlowVersionNumber__c.field-meta.xml
<CustomField>
    <fullName>FlowVersionNumber__c</fullName>
    <label>Flow Version Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>