github-actions/force-app/main/default/objects/ErrorLog__c/fields/InterviewStatus__c.field-meta.xml
<CustomField>
    <fullName>InterviewStatus__c</fullName>
    <label>Interview Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>