github-actions/force-app/main/default/objects/ErrorLog__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Need more information</fullName>
            </value>
            <value>
                <fullName>Fix Deployed</fullName>
            </value>
            <value>
                <fullName>Out of Scope</fullName>
            </value>
            <value>
                <fullName>Not a Bug</fullName>
            </value>
            <value>
                <fullName>Not Reproducable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>