github-actions/force-app/main/default/objects/ErrorLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Severity__c</columns>
    <columns>AffectedUser__c</columns>
    <columns>ComponentType__c</columns>
    <columns>ErrorTitle__c</columns>
    <columns>FlowName__c</columns>
    <columns>FlowNode__c</columns>
    <columns>FlowType__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>